--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 
 <h2>Welcome</h2>
 
-<img src="/images/haskell-logo.png" style="float: right; margin: 10px;" />
+<img src="/images/Britt0001.jpg" style="float: right; margin: 10px;" />
 
 <p>Welcome to my blog!</p>
 
